--- a/tfg/src/app/app.component.html
+++ b/tfg/src/app/app.component.html
@@ -5,12 +5,10 @@
         <mat-icon>menu</mat-icon>
       </button>
       <span>
-        CRUD Angular con PHP y MySQL&nbsp;
-      </span>
-      <span>
-        <a mat-stroked-button href="https://parzibyte.me/blog">By Parzibyte</a>
+        TFG Atletismo
       </span>
     </mat-toolbar-row>
+    <app-login align="right"></app-login>
   </mat-toolbar>
   <mat-sidenav-container class="contenido">
     <mat-sidenav style="min-width: 300px;" #cajon mode="side">
