--- a/tfg_login/atletismo/src/app/register/register.component.html
+++ b/tfg_login/atletismo/src/app/register/register.component.html
@@ -1,26 +1,35 @@
 <h2 class="text-center">Registration</h2>
 <div class="row">
-<div class="col-md-3">
-</div>
-<div class="col-md-6 col-md-offset-3">
-<div class="jumbotron">
-<form [formGroup]="angForm" (ngSubmit)="postdata(angForm)" autocomplete="off" >
-<div class="form-group">
-<label for="name">Name</label>
-<input type="text" name="name" formControlName="name" autocomplete="off" class="form-control input-sm" placeholder="Name">
-</div>
-<div class="form-group">
-<label for="email">Email</label>
-<input type="email" name="email" formControlName="email" autocomplete="off" class="form-control input-sm" placeholder="Email">
-</div>
-<div class="form-group">
-<label for="Password">Password</label>
-<input type="password" name="Password" formControlName="password" autocomplete="off" class="form-control input-sm" placeholder="Password">
-</div>
-<button type="submit" class="btn btn-success" >Register</button>
-</form>
-</div>
-</div>
-<div class="col-md-3">
-</div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-6 col-md-offset-3">
+        <div class="jumbotron">
+            <form [formGroup]="angForm" (ngSubmit)="postdata(angForm)" autocomplete="off">
+
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input class="form-control" [class.is-invalid]="nameNoValido" type="text" name="name" formControlName="name" autocomplete="off" class="form-control input-sm" placeholder="Name">
+                    <small class="text-danger" *ngIf="nameNoValido"> Introduzca un nombre</small>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input class="form-control" [class.is-invalid]="emailNoValido" type="email" name="email" formControlName="email" autocomplete="off" class="form-control input-sm" placeholder="Email">
+                    <small class="text-danger" *ngIf="emailNoValido"> Introduzca un email válido</small>
+
+                </div>
+
+                <div class="form-group">
+                    <label for="Password">Password</label>
+                    <input class="form-control" [class.is-invalid]="passwordNoValido" type="password" name="Password" formControlName="password" autocomplete="off" class="form-control input-sm" placeholder="Password">
+                    <small class="text-danger" *ngIf="passwordNoValido"> Introduzca una contraseña</small>
+
+                </div>
+
+                <button type="submit" class="btn btn-success">Register</button>
+            </form>
+        </div>
+    </div>
+    <div class="col-md-3">
+    </div>
 </div>
