listado entrenadores, comienzo componente entrenamiento

--- a/lista_entr/src/app/entrenadores/entrenadores.component.html
+++ b/lista_entr/src/app/entrenadores/entrenadores.component.html
@@ -1,8 +1,8 @@
 <div class="pidedatos">
     <br><br>
-      <select name="usuario" [(ngModel)]="entrenador">
+    <select name="usuario" [(ngModel)]="entrenador">
         <option value="">Elige entrenador</option>
-        <option *ngFor="let e of entrenadores" value="{{e.nombre}}">{{e.nombre}}</option>
+        <option *ngFor="let e of entrenadores" [value]="e.name">{{e.nombre}}</option>
       </select>
-  </div>
-  <br>
+</div>
+<br>
