--- a/tfg_login/atletismo/src/app/entrenamientos/entrenamiento/entrenamiento.component.html
+++ b/tfg_login/atletismo/src/app/entrenamientos/entrenamiento/entrenamiento.component.html
@@ -1,10 +1,12 @@
+<h2>
+    Entrenamiento</h2>
+
 <form>
     <div class="form-group row mb-4" *ngFor="let ejercicio of ejercicios">
         <label class="col-2 col-form-label">{{ejercicio.nombre}}</label>
         <div class="col-8">
 
             <input class="form-control" name="nombre" placeholder="Valor">
-            <small></small>
         </div>
     </div>
     <div class="form-group ml-7">
