listados entrenadores y atletas completos, retoques otros componentes

--- a/tfg_login/atletismo/src/app/listas/lista-atletas/lista-atletas.component.html
+++ b/tfg_login/atletismo/src/app/listas/lista-atletas/lista-atletas.component.html
@@ -1,1 +1,7 @@
-<p>lista-atletas works!</p>
+<div class="row ml-5">
+    <div class="col-md-3 mb-5" *ngFor="let atleta of grupos">
+
+        <h2 class="card-title">{{atleta.nombre}}</h2>
+        <button (click)="verAtleta(atleta.id_atleta)" class="btn btn-primary">Lista de Atletas</button>
+    </div>
+</div>
