--- a/tfg_login/atletismo/src/app/entrenamientos/entrenamiento/entrenamiento.component.html
+++ b/tfg_login/atletismo/src/app/entrenamientos/entrenamiento/entrenamiento.component.html
@@ -6,10 +6,10 @@
         <label class="col-2 col-form-label">{{ejercicio.nombre}}</label>
         <div class="col-8">
 
-            <input class="form-control" name="nombre" placeholder="Valor">
+            <input [disabled]="disabled" class="form-control" name="nombre" placeholder="Valor">
         </div>
     </div>
     <div class="form-group ml-7">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button [disabled]="disabled" type="submit" class="btn btn-primary">Submit</button>
     </div>
 </form>
