--- a/tfg_login/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
+++ b/tfg_login/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
@@ -3,6 +3,6 @@
 
         <h5 class="card-title">{{entrenador.name}}</h5>
         <p class="card-text">Correo electronico: {{entrenador.email}}</p>
-        <button class="btn btn-primary">Lista de Atletas</button>
+        <button (click)="verListaAtletas(entrenador.id)" class="btn btn-primary">{{entrenador.id}}Lista de Atletas</button>
     </div>
 </div>
