--- a/tfg_login/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
+++ b/tfg_login/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
@@ -1,3 +1,7 @@
+
+<button type="button"  class="btn btn-block" (click)="registro()">Registrar usuario</button>
+<br><br>
+
 <div class="row ml-5">
     <div class="col-md-3 mb-5" *ngFor="let entrenador of entrenadores">
 
