--- a/tfg_login/atletismo/src/app/entrenamientos/entrenamiento/entrenamiento.component.html
+++ b/tfg_login/atletismo/src/app/entrenamientos/entrenamiento/entrenamiento.component.html
@@ -1,33 +1,24 @@
-<!--
-<form>
-    <div class="form-group row mb-4" *ngFor="let ejercicio of ejercicios">
-        <label class="col-2 col-form-label">{{ejercicio.nombre}}</label>
-        <div class="col-8" *ngFor="let entrenamiento of entrenamientos">
-            <input *ngIf="entrenamiento.ejercicio_id== ejercicio.id_ejercicio" [disabled]="disabled" class="form-control" name="nombre" [placeholder]="entrenamiento.valor">
-
-        </div>
-    </div>
-    <div class="form-group ml-7">
-        <button [disabled]="disabled" type="submit" class="btn btn-primary">Submit</button>
-    </div>
-</form> -->
-<!--
-<mat-form-field hintLabel="Max 10 characters" appearance="fill">
-    <mat-label>Enter some input</mat-label>
-    <input matInput #input maxlength="10" placeholder="Ex. Nougat">
-    <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint>
-</mat-form-field>
-
-<mat-form-field appearance="fill">
-    <mat-label>Select me</mat-label>
-    <mat-select>
-        <mat-option value="option">Option</mat-option>
-    </mat-select>
-    <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
-</mat-form-field>
--->
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+  <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+  </symbol>
+</svg>
 
 <h1>Entrenamiento <small>{{fecha}}</small> </h1>
+<div *ngIf="insertarOK" class="alert alert-success d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+    <div>
+        El entrenamiento se ha insertado correctamente
+    </div>
+</div>
+
+<div *ngIf="modificarOK" class="alert alert-success d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+    <div>
+        El entrenamiento se ha modificado correctamente
+    </div>
+</div>
+
 <form (ngSubmit)="guardarinfo(entreno)" autocomplete="off" name="formularioEntreno" [formGroup]="formularioEntreno">
 
     <h2>Rodaje</h2>
@@ -187,7 +178,7 @@
 
 
     <div>
-        <button type="submit" class="btn btn-outline-primary btn-block">
+        <button [disabled]="disabled" type="submit" class="btn btn-outline-primary btn-block">
         Guardar
       </button>
     </div>
