--- a/tfg_login/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
+++ b/tfg_login/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
@@ -1,12 +1,11 @@
-
-<button type="button"  class="btn btn-block" (click)="registro()">Registrar usuario</button>
+<button type="button" class="btn btn-block" (click)="registro()">Registrar usuario</button>
 <br><br>
 
 <div class="row ml-5">
     <div class="col-md-3 mb-5" *ngFor="let entrenador of entrenadores">
 
-        <h5 class="card-title">{{entrenador.name}}</h5>
+        <h2 class="card-title">{{entrenador.name}}</h2>
         <p class="card-text">Correo electronico: {{entrenador.email}}</p>
-        <button (click)="verListaAtletas(entrenador.id)" class="btn btn-primary">{{entrenador.id}}Lista de Atletas</button>
+        <button (click)="verListaAtletas(entrenador.id)" class="btn btn-primary">Lista de Atletas</button>
     </div>
 </div>
