--- a/tfg_login/atletismo/src/app/register/register.component.html
+++ b/tfg_login/atletismo/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-center">Registration</h2>
+<h2 class="text-center">Registro</h2>
 <div class="row">
     <div class="col-md-3">
     </div>
@@ -25,6 +25,19 @@
                     <small class="text-danger" *ngIf="passwordNoValido"> Introduzca una contraseña</small>
 
                 </div>
+
+                <div class="form-group">
+                    <label for="esEntrenador">¿Es atleta?    0->Atleta//1->Entrenador</label>
+                    <input class="form-control" type="text" name="esEntrenador" formControlName="esEntrenador" autocomplete="off" class="form-control input-sm" placeholder="0/1">
+                    <small class="text-danger" ></small>
+                </div>
+
+                <div class="form-group">
+                    <label for="grupo">Grupo de entrenamiento(Solo rellenar si es atleta)</label>
+                    <input class="form-control" type="text" name="grupo" formControlName="grupo" autocomplete="off" class="form-control input-sm" placeholder="grupo">
+                    <small class="text-danger" ></small>
+                </div>
+
 
                 <button type="submit" class="btn btn-success">Register</button>
             </form>
