--- a/tfg_login/atletismo/src/app/register/register.component.html
+++ b/tfg_login/atletismo/src/app/register/register.component.html
@@ -46,9 +46,10 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="esEntrenador">¿Es atleta?    0->Atleta//1->Entrenador</label>
-                    <input class="form-control" type="text" name="esEntrenador" formControlName="esEntrenador" autocomplete="off" class="form-control input-sm" placeholder="0/1">
-                    <small class="text-danger"></small>
+                    <!--<input class="form-check-input" type="checkbox" name="esEntrenador" formControlName="esEntrenador" autocomplete="off" class="form-control input-sm" placeholder="0/1"> Atleta</label>-->
+                    <input type="checkbox" (change)="onChange($event)" formControlName="esEntrenador" id="esEntrenador" class="form-check-input">
+                    <label for="esEntrenador">¿Entrenador?</label>
+
                 </div>
 
                 <div class="form-group" *ngIf="verEntrenadores">
