--- a/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
+++ b/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
@@ -1,6 +1,6 @@
 <button type="button" class="btn btn-outline-success btn-block" (click)="registro()">Registrar usuario</button>
 <br><br>
-
+<h1>Listado de entrenadores</h1>
 <div class="row ml-5">
     <div class="col-md-3 mb-5" *ngFor="let entrenador of entrenadores">
 
