navbar y buscador de entrenadores y atletas

--- a/atletismo/src/app/entrenamientos/calendario/calendario.component.html
+++ b/atletismo/src/app/entrenamientos/calendario/calendario.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <h1>Escoge la fecha de entrenamiento</h1>
 <mat-form-field class="demo-inline-calendar-card" appearance="fill">
     <mat-label>Choose a date</mat-label>
