--- a/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
+++ b/atletismo/src/app/listas/lista-entrenadores/lista-entrenadores.component.html
@@ -1,10 +1,23 @@
-<button type="button" class="btn btn-outline-success btn-block" (click)="registro()">Registrar usuario</button>
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+  <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+    <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+  </symbol>
+  </svg>
+<app-navbar></app-navbar>
+
 <br><br>
 <h1>Listado de entrenadores</h1>
+<br>
 <div class="row ml-5">
     <div class="col-md-3 mb-5" *ngFor="let entrenador of entrenadores">
 
         <h2 class="card-title">{{entrenador.name}}</h2>
         <button (click)="verListaAtletas(entrenador.id)" class="btn btn-primary">Lista de Atletas</button>
+    </div>
+</div>
+<div *ngIf="noHayNada" class="alert alert-danger d-flex align-items-center" role="alert">
+    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+    <div>
+        No hay ningún entrenador con ese nombre.
     </div>
 </div>
