--- a/atletismo/src/app/entrenamientos/calendario/calendario.component.html
+++ b/atletismo/src/app/entrenamientos/calendario/calendario.component.html
@@ -1,20 +1,26 @@
 <app-navbar></app-navbar>
 <h1>Escoge la fecha de entrenamiento</h1>
-<mat-form-field class="demo-inline-calendar-card" appearance="fill">
-    <mat-label>Choose a date</mat-label>
-    <!-- #docregion toggle -->
-    <input matInput [matDatepicker]="picker" (dateChange)="dateChanged($event)">
-    <mat-hint>MM/DD/YYYY</mat-hint>
-    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-    <!-- #enddocregion toggle -->
-</mat-form-field>
+<div class="container">
+    <div class="row">
+        <div class="col order-first">
+            <mat-form-field class="demo-inline-calendar-card" appearance="fill">
+                <mat-label>Choose a date</mat-label>
+                <!-- #docregion toggle -->
+                <input matInput [matDatepicker]="picker" (dateChange)="dateChanged($event)">
+                <mat-hint>MM/DD/YYYY</mat-hint>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+                <!-- #enddocregion toggle -->
+            </mat-form-field>
 
-<div>
-    <button (click)="verEntrenamiento()" *ngIf="seleccionado" class="btn btn-success">Ver entrenamiento</button>
-    <button (click)="editarEntrenamiento()" *ngIf="seleccionado" class="btn btn-info">Insertar/Editar entrenamiento</button>
-</div>
-
-<div *ngIf="mostrar">
-    <app-entrenamiento></app-entrenamiento>
+            <br>
+            <div>
+                <button (click)="verEntrenamiento()" *ngIf="seleccionado" class="btn btn-success">Ver entrenamiento</button>
+                <button (click)="editarEntrenamiento()" *ngIf="seleccionado" class="btn btn-info">Insertar/Editar entrenamiento</button>
+            </div>
+        </div>
+        <div class="col order-last" *ngIf="seleccionado">
+            <app-meteorologia [fecha]="fechaString"></app-meteorologia>
+        </div>
+    </div>
 </div>
