--- a/atletismo/src/app/components/meteorologia/meteorologia.component.html
+++ b/atletismo/src/app/components/meteorologia/meteorologia.component.html
@@ -1,42 +1,43 @@
-<br><br>
-<h1>{{fecha}}</h1>
-<table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Condicion</th>
-            <th scope="col">valor</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row">conditions</th>
-            <td>{{tiempo.conditions}}</td>
-        </tr>
-        <tr>
-            <th scope="row">visibility</th>
-            <td>{{tiempo.visibility}}</td>
-        </tr>
-        <tr>
-            <th scope="row">tempmax</th>
-            <td>{{tiempo.tempmax}}</td>
-        </tr>
-        <tr>
-            <th scope="row">tempmin</th>
-            <td>{{tiempo.tempmin}}</td>
-        </tr>
-        <tr>
-            <th scope="row">snow</th>
-            <td>{{tiempo.snow}}</td>
-        </tr>
-        <tr>
-            <th scope="row">windspeed</th>
-            <td>{{tiempo.windspeed}}</td>
-        </tr>
-        <tr>
-            <th scope="row">precip</th>
-            <td>{{tiempo.precip}}</td>
-        </tr>
+<div>
+    <h1>{{fecha}}</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">Condición</th>
+                <th scope="col">valor</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">Condiciones</th>
+                <td>{{tiempo.conditions}}</td>
+            </tr>
+            <tr>
+                <th scope="row">Visibilidad</th>
+                <td>{{tiempo.visibility}} Km</td>
+            </tr>
+            <tr>
+                <th scope="row">Temperatura máxima</th>
+                <td>{{tiempo.tempmax}} ºC</td>
+            </tr>
+            <tr>
+                <th scope="row">Temperatura mínima</th>
+                <td>{{tiempo.tempmin}} ºC</td>
+            </tr>
+            <tr>
+                <th scope="row">Nieve</th>
+                <td>{{tiempo.snow}} mm</td>
+            </tr>
+            <tr>
+                <th scope="row">Velocidad del viento</th>
+                <td>{{tiempo.windspeed}} m/s</td>
+            </tr>
+            <tr>
+                <th scope="row">Precipitaciones</th>
+                <td>{{tiempo.precip}} mm</td>
+            </tr>
 
-    </tbody>
-</table>
-<br><br>
+        </tbody>
+    </table>
+    <br><br>
+</div>
