--- a/atletismo/src/app/entrenamientos/calendario/calendario.component.html
+++ b/atletismo/src/app/entrenamientos/calendario/calendario.component.html
@@ -24,3 +24,7 @@
         </div>
     </div>
 </div>
+<br>
+<div *ngIf="seleccionado">
+    <app-grafica [fecha]="fechaString" [id]="idAtleta"></app-grafica>
+</div>
