fallo grafica solucionado

--- a/atletismo/src/app/entrenamientos/calendario/calendario.component.html
+++ b/atletismo/src/app/entrenamientos/calendario/calendario.component.html
@@ -26,5 +26,5 @@
 </div>
 <br>
 <div *ngIf="seleccionado">
-    <app-grafica [fecha]="fechaString" [id]="idAtleta"></app-grafica>
+    <app-grafica [fecha]="fechaString" [id]="idGrafica"></app-grafica>
 </div>
